--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,7 +8,7 @@ default:
   image: registry.cern.ch/ghcr.io/acts-project/alma9-base:70
 
 variables:
-  ACTS_VERSION: v39.0.0
+  ACTS_VERSION: v39.2.0
   ACTS_GIT_URL: https://github.com/acts-project/acts.git
   LCG_PLATFORM: el9
   LCG_VERSION: 105a # somehow the calo validation does not work with newer root
@@ -47,13 +47,14 @@ build-acts:
     - |
       # Patches:
       pushd acts
-      curl https://patch-diff.githubusercontent.com/raw/acts-project/acts/pull/4073.diff | git apply
+      # PATCHES GO HERE
       popd
 
     - ccache -z
     - ci/build_acts.sh
     - ccache -s
     # this is a workaround, see https://github.com/acts-project/acts/issues/1242
+    # - cp -r acts/Examples/Scripts/Python/* acts-install/python
 
 build-odd:
   extends: .lcg_base
