--- a/factory/CMakeLists.txt
+++ b/factory/CMakeLists.txt
@@ -6,7 +6,8 @@ add_library(
     tracker/ODDPixelEndcap_geo.cpp
     tracker/ODDStripBarrel_geo.cpp
     tracker/ODDStripEndcap_geo.cpp
-    calorimeter/ODDPolyhedraEndcapCalorimeter_geo.cpp)
+    calorimeter/ODDPolyhedraEndcapCalorimeter_geo.cpp
+    calorimeter/ODDPolyhedraBarrelCalorimeter_geo.cpp)
 
 target_link_libraries(OpenDataDetector PUBLIC DD4hep::DDCore DD4hep::DDRec)
 
